--- a/index.html
+++ b/index.html
@@ -3,160 +3,129 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>موقع القرآن الكريم</title>
+  <title>القرآن الكريم</title>
 
-  <!-- Open Graph Meta Tags -->
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Open Graph -->
   <meta property="og:title" content="موقع القرآن الكريم" />
   <meta property="og:description" content="صدقة جارية - استمع وتدبر القرآن الكريم" />
   <meta property="og:image" content="logo.png" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://yourusername.github.io/repo-name/" />
 
-  <!-- Twitter Card Meta Tags -->
+  <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="موقع القرآن الكريم" />
   <meta name="twitter:description" content="صدقة جارية - استمع وتدبر القرآن الكريم" />
   <meta name="twitter:image" content="logo.png" />
 
   <style>
-    body {
-      background: black;
-      color: white;
-      text-align: center;
-      font-family:  Amiri , serif;
-      margin: 0;
-      padding: 0;
-    }
-
+    html { scroll-behavior: smooth; }
     header img {
       width: 100%;
-      max-width: 3000px;
-      height: 1305px;
-      object-fit: cover;
-    }
-
-    h1 {
-      font-size: 2em;
-      margin: 20px 0;
-    }
-
-    .buttons {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 10px;
-      margin: 20px;
-    }
-
-    button {
-      padding: 15px;
-      font-size: 1.2em;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      background: #333;
-      color: white;
-      transition: 0.3s;
-    }
-
-    button:hover {
-      background: #555;
-    }
-
-    .back-btn {
-      background: yellow;
-      color: black;
-      margin-top: 20px;
-      font-weight: bold;
-    }
-
-    footer {
-      margin-top: 50px;
-      font-size: 0.9em;
-      color: #aaa;
-    }
-
-    select {
-      margin: 20px;
-      padding: 10px;
-      font-size: 1em;
-      border-radius: 5px;
+      max-width: 800px;
+      height: auto;
+      margin: 0 auto;
+      display: block;
     }
   </style>
 </head>
-<body>
-  <header>
-    <img src="moot.png" alt="شعار الموقع">
+<body class="bg-black text-white font-[Amiri]">
+
+  <!-- اللوجو -->
+  <header class="py-6">
+    <img src="moot.png" alt="logo">
   </header>
 
-  <h1>📖 موقع القرآن الكريم</h1>
-  <h3>صدقة جارية عن كل متوفي</h3>
+  <!-- العنوان -->
+  <h2 class="text-center text-yellow-400 text-2xl my-6">
+    صدقة جارية على حرم رمضان عبدالهادي - محمد رمضان الصعيدي "وكل متوفي"
+  </h2>
 
   <!-- اختيار الشيخ -->
-  <label for="reciter">🎙 اختر القارئ:</label>
-  <select id="reciter">
-    <option value="ar.alafasy">مشاري راشد</option>
-    <option value="ar.abdurrahmaan-mussad">عبد الرحمن مسعد</option>
-  </select>
-
-  <div id="sura-list" class="buttons"></div>
-
-  <div id="sura-content" style="display:none;">
-    <h2 id="sura-name"></h2>
-    <p id="sura-text"></p>
-    <audio id="sura-audio" controls autoplay></audio>
-    <button class="back-btn" onclick="goBack()">⬅ رجوع للقائمة</button>
+  <div class="text-center my-4">
+    <label class="text-lg">اختر القارئ: </label>
+    <select id="reciter" class="bg-gray-800 text-white p-2 rounded">
+      <option value="afs">مشاري راشد</option>
+      <option value="musshaf_mjwd_Abdurrahman_Mussad">عبدالرحمن مسعد</option>
+    </select>
   </div>
 
-  <footer>
-    <p>تم تطوير الموقع مجاناً | للتواصل واتساب فقط: 01212843252</p>
+  <!-- قائمة السور -->
+  <div id="surahList" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 p-6"></div>
+
+  <!-- محتوى السورة -->
+  <div id="content" class="hidden text-center p-6">
+    <h2 id="surahName" class="text-3xl text-yellow-400 mb-4"></h2>
+    <audio id="player" controls class="w-11/12 mx-auto mb-6"></audio>
+    <button onclick="goBack()" class="bg-yellow-400 text-black px-6 py-2 rounded-lg">⬅ رجوع</button>
+  </div>
+
+  <!-- الفوتر -->
+  <footer class="text-center text-gray-400 py-6 mt-10 border-t border-gray-700">
+    <p>تم تطوير الموقع مجانا - للتواصل واتساب فقط: 01212843252</p>
     <p>جميع الحقوق محفوظة © 2025</p>
+    <p class="text-yellow-400">المطور / محمد الصنقري</p>
   </footer>
 
   <script>
-    const suraList = document.getElementById("sura-list");
-    const suraContent = document.getElementById("sura-content");
-    const suraName = document.getElementById("sura-name");
-    const suraText = document.getElementById("sura-text");
-    const suraAudio = document.getElementById("sura-audio");
+    const surahs = [
+      "الفاتحة","البقرة","آل عمران","النساء","المائدة","الأنعام","الأعراف","الأنفال",
+      "التوبة","يونس","هود","يوسف","الرعد","إبراهيم","الحجر","النحل",
+      "الإسراء","الكهف","مريم","طه","الأنبياء","الحج","المؤمنون","النور",
+      "الفرقان","الشعراء","النمل","القصص","العنكبوت","الروم","لقمان","السجدة",
+      "الأحزاب","سبأ","فاطر","يس","الصافات","ص","الزمر","غافر","فصلت",
+      "الشورى","الزخرف","الدخان","الجاثية","الأحقاف","محمد","الفتح","الحجرات",
+      "ق","الذاريات","الطور","النجم","القمر","الرحمن","الواقعة","الحديد",
+      "المجادلة","الحشر","الممتحنة","الصف","الجمعة","المنافقون","التغابن",
+      "الطلاق","التحريم","الملك","القلم","الحاقة","المعارج","نوح","الجن",
+      "المزمل","المدثر","القيامة","الإنسان","المرسلات","النبأ","النازعات",
+      "عبس","التكوير","الانفطار","المطففين","الانشقاق","البروج","الطارق",
+      "الأعلى","الغاشية","الفجر","البلد","الشمس","الليل","الضحى","الشرح",
+      "التين","العلق","القدر","البينة","الزلزلة","العاديات","القارعة",
+      "التكاثر","العصر","الهمزة","الفيل","قريش","الماعون","الكوثر","الكافرون",
+      "النصر","المسد","الإخلاص","الفلق","الناس"
+    ];
+
+    const surahList = document.getElementById("surahList");
+    const content = document.getElementById("content");
+    const surahName = document.getElementById("surahName");
+    const player = document.getElementById("player");
     const reciterSelect = document.getElementById("reciter");
 
-    async function loadSuras() {
-      let res = await fetch("https://api.alquran.cloud/v1/surah");
-      let data = await res.json();
-      data.data.forEach(sura => {
-        let btn = document.createElement("button");
-        btn.textContent = sura.name;
-        btn.onclick = () => loadSura(sura.number);
-        suraList.appendChild(btn);
-      });
-    }
+    // إنشاء أزرار السور
+    surahs.forEach((name, index) => {
+      const div = document.createElement("div");
+      div.className = "bg-gray-900 text-white text-xl py-4 rounded-lg cursor-pointer hover:bg-yellow-400 hover:text-black transition text-center";
+      div.innerText = name;
+      div.onclick = () => {
+        const surahNumber = String(index + 1).padStart(3, "0");
+        const reciter = reciterSelect.value;
+        let url = "";
 
-    async function loadSura(number) {
-      // نص السورة
-      let res = await fetch(`https://api.alquran.cloud/v1/surah/${number}`);
-      let data = await res.json();
-      let text = data.data.ayahs.map(a => a.text).join(" ");
-      suraName.textContent = data.data.englishName;
-      suraText.textContent = text;
+        if (reciter === "afs") {
+          url = `https://server8.mp3quran.net/afs/${surahNumber}.mp3`;
+        } else {
+          url = `https://server12.mp3quran.net/musshaf_mjwd_Abdurrahman_Mussad/${surahNumber}.mp3`;
+        }
 
-      // الصوت من القارئ المختار
-      let reciter = reciterSelect.value;
-      let audioRes = await fetch(`https://api.alquran.cloud/v1/ayah/${number}:1/${reciter}`);
-      let audioData = await audioRes.json();
-      if (audioData.data && audioData.data.audio) {
-        suraAudio.src = audioData.data.audio;
-      }
+        surahName.innerText = name;
+        player.src = url;
 
-      suraList.style.display = "none";
-      suraContent.style.display = "block";
-    }
+        surahList.classList.add("hidden");
+        content.classList.remove("hidden");
+      };
+      surahList.appendChild(div);
+    });
 
     function goBack() {
-      suraList.style.display = "grid";
-      suraContent.style.display = "none";
+      content.classList.add("hidden");
+      surahList.classList.remove("hidden");
+      player.pause();
     }
-
-    loadSuras();
   </script>
 </body>
-</html>
+    </html>
+  
