--- a/index.html
+++ b/index.html
@@ -3,133 +3,122 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>القرآن الكريم</title>
+  <title>موقع قرآن كريم</title>
 
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Meta Tags لمعاينة الرابط -->
+  <meta property="og:title" content="موقع قرآن كريم - صدقة جارية">
+  <meta property="og:description" content="استمع واقرأ القرآن الكريم كامل بصوت جميل">
+  <meta property="og:image" content="logo.png">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://اسم-موقعك.github.io">
 
   <style>
-    html { scroll-behavior: smooth; }
-    header img {
-      width: 100%;
-      max-width: 500px;
-      height: auto;
-      margin: 0 auto;
-      display: block;
+    body {
+      background: #000;
+      color: #fff;
+      font-family: "Tahoma", sans-serif;
+      text-align: center;
     }
-    #surahText {
-      font-size: 1.3rem;
-      line-height: 2.2rem;
-      color: #f9f9f9;
+    header {
+      margin: 20px 0;
+    }
+    header img {
+      width: 300px;
+      height: auto;
+    }
+    .surah-list button {
+      display: block;
+      margin: 10px auto;
+      padding: 12px;
+      width: 220px;
+      background: #222;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      font-size: 18px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .surah-list button:hover {
+      background: #444;
+    }
+    #surah-content {
       margin-top: 20px;
-      text-align: justify;
+      white-space: pre-line;
+      line-height: 2;
+    }
+    footer {
+      margin-top: 40px;
+      font-size: 14px;
+      color: #ccc;
+    }
+    footer span {
+      display: block;
+      margin: 5px 0;
+    }
+    .moot-img {
+      max-width: 600px; /* زي الحجم بتاع الصوره اللي وريتهولي */
+      width: 100%;
+      height: auto;
+      margin: 20px auto;
+      display: block;
     }
   </style>
 </head>
-<body class="bg-black text-white font-[Amiri]">
+<body>
 
-  <!-- اللوجو -->
-  <header class="py-6">
-    <img src="moot.png" alt="logo">
+  <header>
+    <img src="moot.png" alt="صدقة جارية" class="moot-img">
+    <h2>📅 تاريخ الوفاة: 2025/9/25 😢💔</h2>
+    <h3 style="color:#FFD700; text-shadow: 0 0 10px #FFD700;">
+      ✨ صدقة جارية لروح "رمضان عبدالهادي - محمد رمضان الصعيدي - وكل متوفي"
+    </h3>
   </header>
 
-  <!-- العنوان -->
-  <h2 class="text-center text-yellow-400 text-2xl my-6">
-    صدقة جارية على روح المتوفين
-  </h2>
+  <main>
+    <div class="surah-list" id="surah-list"></div>
+    <div id="surah-content"></div>
+    <audio id="audio" controls style="margin-top:20px; display:none;"></audio>
+  </main>
 
-  <!-- قائمة السور -->
-  <div id="surahList" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 p-6"></div>
-
-  <!-- محتوى السورة -->
-  <div id="content" class="hidden text-center p-6">
-    <h2 id="surahName" class="text-3xl text-yellow-400 mb-4"></h2>
-
-    <!-- الأزرار لاختيار القارئ -->
-    <div class="flex justify-center gap-4 mb-4">
-      <button onclick="playReciter( afs )" class="bg-yellow-400 text-black px-4 py-2 rounded-lg">🎧 مشاري راشد</button>
-      <button onclick="playReciter( musshaf_mjwd_Abdurrahman_Mussad )" class="bg-yellow-400 text-black px-4 py-2 rounded-lg">🎧 عبدالرحمن مسعد</button>
-    </div>
-
-    <audio id="player" controls class="w-11/12 mx-auto mb-6"></audio>
-    <div id="surahText" class="bg-gray-900 p-4 rounded-lg shadow-lg text-right"></div>
-
-    <button onclick="goBack()" class="bg-yellow-400 text-black px-6 py-2 mt-6 rounded-lg">⬅ رجوع</button>
-  </div>
-
-  <!-- الفوتر -->
-  <footer class="text-center text-gray-400 py-6 mt-10 border-t border-gray-700">
-    <p>تم تطوير الموقع مجانا</p>
-    <p class="text-yellow-400">المطور / محمد الصنقري</p>
+  <footer>
+    <span>💻 تم التطوير بواسطة: <b>محمد الصنقري</b></span>
+    <span>📞 لتطوير موقع مجانا: 01212843252</span>
+    <span>⚖️ جميع الحقوق محفوظة © 2025</span>
   </footer>
 
   <script>
-    const surahs = [
-      "الفاتحة","البقرة","آل عمران","النساء","المائدة","الأنعام","الأعراف","الأنفال",
-      "التوبة","يونس","هود","يوسف","الرعد","إبراهيم","الحجر","النحل",
-      "الإسراء","الكهف","مريم","طه","الأنبياء","الحج","المؤمنون","النور",
-      "الفرقان","الشعراء","النمل","القصص","العنكبوت","الروم","لقمان","السجدة",
-      "الأحزاب","سبأ","فاطر","يس","الصافات","ص","الزمر","غافر","فصلت",
-      "الشورى","الزخرف","الدخان","الجاثية","الأحقاف","محمد","الفتح","الحجرات",
-      "ق","الذاريات","الطور","النجم","القمر","الرحمن","الواقعة","الحديد",
-      "المجادلة","الحشر","الممتحنة","الصف","الجمعة","المنافقون","التغابن",
-      "الطلاق","التحريم","الملك","القلم","الحاقة","المعارج","نوح","الجن",
-      "المزمل","المدثر","القيامة","الإنسان","المرسلات","النبأ","النازعات",
-      "عبس","التكوير","الانفطار","المطففين","الانشقاق","البروج","الطارق",
-      "الأعلى","الغاشية","الفجر","البلد","الشمس","الليل","الضحى","الشرح",
-      "التين","العلق","القدر","البينة","الزلزلة","العاديات","القارعة",
-      "التكاثر","العصر","الهمزة","الفيل","قريش","الماعون","الكوثر","الكافرون",
-      "النصر","المسد","الإخلاص","الفلق","الناس"
-    ];
+    const surahList = document.getElementById("surah-list");
+    const surahContent = document.getElementById("surah-content");
+    const audioPlayer = document.getElementById("audio");
 
-    const surahList = document.getElementById("surahList");
-    const content = document.getElementById("content");
-    const surahName = document.getElementById("surahName");
-    const surahText = document.getElementById("surahText");
-    const player = document.getElementById("player");
+    // جلب قائمة السور
+    fetch("https://api.alquran.cloud/v1/surah")
+      .then(res => res.json())
+      .then(data => {
+        data.data.forEach(surah => {
+          const btn = document.createElement("button");
+          btn.textContent = surah.name;
+          btn.onclick = () => loadSurah(surah.number);
+          surahList.appendChild(btn);
+        });
+      });
 
-    let currentSurah = 1;
-
-    // إنشاء أزرار السور
-    surahs.forEach((name, index) => {
-      const div = document.createElement("div");
-      div.className = "bg-gray-900 text-white text-xl py-4 rounded-lg cursor-pointer hover:bg-yellow-400 hover:text-black transition text-center";
-      div.innerText = name;
-      div.onclick = async () => {
-        currentSurah = index + 1;
-        surahName.innerText = name;
-
-        // جلب الآيات من API
-        const res = await fetch(`https://api.quran.com/v4/quran/verses/uthmani?chapter_number=${currentSurah}`);
-        const data = await res.json();
-        const verses = data.verses.map(v => v.text_uthmani).join(" ");
-        surahText.innerText = verses;
-
-        surahList.classList.add("hidden");
-        content.classList.remove("hidden");
-      };
-      surahList.appendChild(div);
-    });
-
-    // تشغيل الشيخ حسب الاختيار
-    function playReciter(reciter) {
-      const surahNumber = String(currentSurah).padStart(3, "0");
-      let url = "";
-
-      if (reciter === "afs") {
-        url = `https://server8.mp3quran.net/afs/${surahNumber}.mp3`;
-      } else {
-        url = `https://server12.mp3quran.net/musshaf_mjwd_Abdurrahman_Mussad/${surahNumber}.mp3`;
-      }
-
-      player.src = url;
-      player.play();
-    }
-
-    function goBack() {
-      content.classList.add("hidden");
-      surahList.classList.remove("hidden");
-      player.pause();
+    // تحميل السوره المختاره
+    function loadSurah(num) {
+      surahList.style.display = "none"; // يخفي القائمه
+      fetch(`https://api.alquran.cloud/v1/surah/${num}`)
+        .then(res => res.json())
+        .then(data => {
+          surahContent.textContent = "";
+          data.data.ayahs.forEach(ayah => {
+            surahContent.textContent += ayah.text + " ";
+          });
+          // تشغيل صوت
+          audioPlayer.src = `https://verses.quran.com/${num}.mp3`; 
+          audioPlayer.style.display = "block";
+          audioPlayer.play();
+        });
     }
   </script>
 </body>
