--- a/index.html
+++ b/index.html
@@ -1,129 +1,163 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>موقع قرآن كريم</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>موقع قرآن كريم</title>
 
-  <style>
-    body {
-      background: #000;
-      color: #fff;
-      font-family: "Tahoma", sans-serif;
-      text-align: center;
-    }
-    header {
-      margin: 20px 0;
-    }
-    header img {
-      width: 300px;
-      height: auto;
-    }
-    .surah-list {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-    }
-    .surah-list button {
-      flex: 0 0 45%; /* كل زر ياخد حوالي نصف العرض */
-      padding: 12px;
-      background: #222;
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      font-size: 18px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .surah-list button:hover {
-      background: #444;
-    }
-    #surah-content {
-      margin-top: 20px;
-      white-space: pre-line;
-      line-height: 2;
-    }
-    footer {
-      margin-top: 40px;
-      font-size: 14px;
-      color: #ccc;
-    }
-    footer span {
-      display: block;
-      margin: 5px 0;
-    }
-    .moot-img {
-      max-width: 600px;
-      width: 100%;
-      height: auto;
-      margin: 20px auto;
-      display: block;
-    }
-    audio {
-      width: 90%;
-      margin-top: 20px;
-    }
-  </style>
+<style>
+  body {
+    background: #000;
+    color: #fff;
+    font-family: "Tahoma", sans-serif;
+    text-align: center;
+  }
+  header {
+    margin: 20px 0;
+  }
+  header img {
+    width: 300px;
+    height: auto;
+  }
+  .surah-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+  }
+  .surah-list button {
+    flex: 0 0 45%;
+    padding: 12px;
+    background: #222;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  .surah-list button:hover {
+    background: #444;
+  }
+  #surah-content {
+    margin-top: 20px;
+    white-space: pre-line;
+    line-height: 2;
+    text-align: right;
+    direction: rtl;
+  }
+  #back-btn {
+    margin: 15px 0;
+    padding: 10px 20px;
+    background: #444;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    display: none;
+  }
+  #back-btn:hover {
+    background: #666;
+  }
+  audio {
+    width: 90%;
+    margin-top: 20px;
+    display: none;
+  }
+  footer {
+    margin-top: 40px;
+    font-size: 14px;
+    color: #ccc;
+  }
+  footer span {
+    display: block;
+    margin: 5px 0;
+  }
+  .moot-img {
+    max-width: 600px;
+    width: 100%;
+    height: auto;
+    margin: 20px auto;
+    display: block;
+  }
+</style>
 </head>
 <body>
 
-  <header>
-    <img src="moot.png" alt="صدقة جارية" class="moot-img">
-    <h2>📅 تاريخ الوفاة: 2025/9/25 😢💔</h2>
-    <h3 style="color:#FFD700; text-shadow: 0 0 10px #FFD700;">
-      ✨ صدقة جارية لروح "رمضان عبدالهادي - محمد رمضان الصعيدي - وكل متوفي"
-    </h3>
-  </header>
+<header>
+  <img src="moot.png" alt="صدقة جارية" class="moot-img">
+  <h2>📅 تاريخ الوفاة: 2025/9/25 😢💔</h2>
+  <h3 style="color:#FFD700; text-shadow: 0 0 10px #FFD700;">
+    ✨ "صدقة جارية حرم رمضان عبدالهادي - محمد رمضان الصعيدي - وكل متوفي"
+  </h3>
+</header>
 
-  <main>
-    <div class="surah-list" id="surah-list"></div>
-    <div id="surah-content"></div>
-    <audio id="audio" controls style="display:none;"></audio>
-  </main>
+<main>
+  <div class="surah-list" id="surah-list"></div>
+  <button id="back-btn" onclick="goBack()">🔙 رجوع </button>
+  <audio id="audio" controls></audio>
+  <div id="surah-content"></div>
+</main>
 
-  <footer>
-    <span>💻 تم التطوير بواسطة: <b>محمد الصنقري</b></span>
-    <span>📞 لتطوير موقع مجانا: 01212843252</span>
-    <span>⚖️ جميع الحقوق محفوظة © 2025</span>
-  </footer>
+<footer>
+  <span>💻 تم التطوير بواسطة: <b>محمد الصنقري</b></span>
+  <span>📞 لتطوير موقع مجانا: 01212843252</span>
+  <span>⚖️ جميع الحقوق محفوظة © 2025</span>
+</footer>
 
-  <script>
-    const surahList = document.getElementById("surah-list");
-    const surahContent = document.getElementById("surah-content");
-    const audioPlayer = document.getElementById("audio");
+<script>
+const surahList = document.getElementById("surah-list");
+const surahContent = document.getElementById("surah-content");
+const audioPlayer = document.getElementById("audio");
+const backBtn = document.getElementById("back-btn");
 
-    // جلب قائمة السور
-    fetch("https://api.alquran.cloud/v1/surah")
-      .then(res => res.json())
-      .then(data => {
-        data.data.forEach(surah => {
-          const btn = document.createElement("button");
-          btn.textContent = surah.name;
-          btn.onclick = () => loadSurah(surah.number);
-          surahList.appendChild(btn);
-        });
+// جلب قائمة السور
+fetch("https://api.alquran.cloud/v1/surah")
+  .then(res => res.json())
+  .then(data => {
+    data.data.forEach(surah => {
+      const btn = document.createElement("button");
+      btn.textContent = surah.name;
+      btn.onclick = () => loadSurah(surah.number);
+      surahList.appendChild(btn);
+    });
+  });
+
+// تحميل السورة المختارة
+function loadSurah(num) {
+  surahList.style.display = "none"; // اخفاء قائمة السور
+  backBtn.style.display = "inline-block"; // اظهار زر الرجوع
+  surahContent.textContent = "جارٍ التحميل...";
+
+  fetch(`https://api.alquran.cloud/v1/surah/${num}/ar.alafasy`)
+    .then(res => res.json())
+    .then(data => {
+      surahContent.textContent = "";
+      data.data.ayahs.forEach(ayah => {
+        surahContent.textContent += ayah.text + "\n";
       });
 
-    // تحميل السوره المختاره
-    function loadSurah(num) {
-      surahContent.textContent = "جارٍ التحميل...";
-      fetch(`https://api.alquran.cloud/v1/surah/${num}/ar.alafasy`)
-        .then(res => res.json())
-        .then(data => {
-          surahContent.textContent = "";
-          data.data.ayahs.forEach(ayah => {
-            surahContent.textContent += ayah.text + " ";
-          });
-          // تشغيل صوت الشيخ
-          audioPlayer.src = `https://everyayah.com/data/Alafasy/${num}.mp3`;
-          audioPlayer.style.display = "block";
-          audioPlayer.play();
-        }).catch(err => {
-          surahContent.textContent = "❌ حدث خطأ في تحميل السورة";
-          console.error(err);
-        });
-    }
-  </script>
+      // تشغيل الصوت
+      audioPlayer.src = `https://everyayah.com/data/Alafasy/${num}.mp3`;
+      audioPlayer.style.display = "block";
+      audioPlayer.play().catch(err => console.log("مشكلة في تشغيل الصوت:", err));
+    })
+    .catch(err => {
+      surahContent.textContent = "❌ حدث خطأ في تحميل السورة";
+      console.error(err);
+    });
+}
+
+// زر الرجوع
+function goBack() {
+  surahList.style.display = "flex";
+  backBtn.style.display = "none";
+  surahContent.textContent = "";
+  audioPlayer.pause();
+  audioPlayer.style.display = "none";
+}
+</script>
+
 </body>
-</html>
+  </html>
+    
